--- a/styles/style.css
+++ b/styles/style.css
@@ -1,93 +1,151 @@
-        nav {
-            background: #bb0101;
-            width: 100%;
-            height: 50px;
-            position: fixed;
-            border-bottom: #f1f1f1 1px solid;
-            top: 0;
-            left: 0;
-            z-index: 0;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 0px 10px 0px 10px;
-        }
-        .div-button {
-            border-radius: 10px;
-            /* border: #f1f1f1 1px solid; */
-            width: 100px;
-            height: 40px;
-            background: #bb0101;
-            color: #000;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-            transition: background 0.5s;
-        }
-        .div-button:hover {
-            background: #000;
-            color: #f1f1f1;
-        }
-        header {
-            background: linear-gradient(40deg, #500000, #bb0101 40%);
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            border: 1px solid #fff;
-            /*position: absolute;*/
-            position: relative;
-            top: 0;
-            left: 50%;
-            transform: translateX(-50%);
-            z-index: 1;
-            margin-top: 10px;
-            display: flex;
-            align-items: flex-end;
-            justify-content: center;
-            animation: slideInDown 1s ease-out;
-        }
+nav {
+    background: #bb0101;
+    width: 100%;
+    height: 50px;
+    position: fixed;
+    border-bottom: #f1f1f1 1px solid;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px; /* Ajusta el padding si es necesario */
+    box-sizing: border-box; /* Asegura que el padding no afecte el tamaño total */
+}
+a{
+    text-decoration: none;
+}
+nav  a {    
+    color: #000;
+}
+nav a:hover {
+    color: #f1f1f1;
+}
 
-        img {
-            width: 130px;
-            margin: 0 auto;
-            height: auto;
-            margin-bottom: 10px;
-        }
+.div-button {
+    border-radius: 10px;
+    width: auto;
+    height: 40px;
+    padding: 10px;
+    background: #bb0101;
+    color: #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: background 0.5s;
+    box-sizing: border-box; /* Asegura que el padding no afecte el tamaño total */
+}
 
-        @keyframes slideInDown {
-            from {
-                transform: translate3d(-50%, -110%, 0);
-                opacity: 0;
-            }
-            to {
-                transform: translate3d(-50%,0,0);
-                opacity: 1;
-            }
-            
-        }
-        body {
-            background: #1a1a1a;
-            color: #f1f1f1;
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            position: relative;
-        }
-        
-        table {
-            margin: 10px 10px 10px 10px;
-            border: 1px solid #000;
-            border-collapse: collapse;
-            width: 100%;
-        }
+.div-button:hover {
+    background: #000;
+    color: #f1f1f1;
+}
 
-        td {
-            border: 1px solid #000;
-            padding: 10px;
-            text-align: center;
-            cursor: pointer;
-        }
+header {
+    background: linear-gradient(40deg, #500000, #bb0101 40%);
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    border: 1px solid #fff;
+    /*position: absolute;*/
+    position: relative;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+    margin-top: 10px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    animation: slideInDown 1s ease-out;
+}
+
+img {
+    width: 130px;
+    margin: 0 auto;
+    height: auto;
+    margin-bottom: 10px;
+}
+
+@keyframes slideInDown {
+    from {
+        transform: translate3d(-50%, -110%, 0);
+        opacity: 0;
+    }
+    to {
+        transform: translate3d(-50%,0,0);
+        opacity: 1;
+    }
+    
+}
+
+.name{
+    font-size: 30px;
+    font-weight: bold;
+    color: #f1f1f1;
+    text-align: center;
+}
+
+body {
+    background: #1a1a1a;
+    color: #f1f1f1;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: justify;
+    margin: 0;
+    padding: 0;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    min-width: 320px;
+}
+
+.social-buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.social-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    border: #fff 1px solid;
+    padding: 5px 20px; /* Ajusta el padding según sea necesario */
+    margin: 0 10px;
+}
+
+.social-button a {
+    color: #f1f1f1;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+}
+.img-icon {
+    width: 20px;
+    height: 20px;
+    margin-top: 5px;
+    margin-right: 5px; /* Añade un margen derecho para separar el icono del texto */
+}
+
+.social-button p {
+    margin: 0; /* Elimina el margen del párrafo */
+}
+
+.div-1,.div-2{
+    width: 50%;
+    margin: 0 auto;
+    min-width: 100px;
+}
+
+.div-2{
+    background-color: #500000;
+    font-family:  serif;
+    padding: 1px 40px;
+    font-style: italic;
+}
