--- a/styles/style.css
+++ b/styles/style.css
@@ -59,7 +59,7 @@ header {
     display: flex;
     align-items: flex-end;
     justify-content: center;
-    animation: slideInDown 1s ease-out;
+    animation: slideInDown 1s ease-out; /*llamamos a la animación*/
 }
 
 img {
@@ -69,7 +69,7 @@ img {
     margin-bottom: 10px;
 }
 
-@keyframes slideInDown {
+@keyframes slideInDown {    /*Animación del logo de entrada*/
     from {
         transform: translate3d(-50%, -110%, 0);
         opacity: 0;
@@ -82,10 +82,14 @@ img {
 }
 
 .name{
+    background: #1a1a1a;
+    border-radius: 5px;
+    width: 76%;
     font-size: 30px;
     font-weight: bold;
     color: #f1f1f1;
     text-align: center;
+    margin: 10px auto;
 }
 
 body {
@@ -103,6 +107,15 @@ body {
     min-width: 320px;
 }
 
+.img-background {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    opacity: 0.5;
+}
 .social-buttons {
     display: flex;
     justify-content: center;
@@ -137,8 +150,17 @@ body {
     margin: 0; /* Elimina el margen del párrafo */
 }
 
-.div-1,.div-2{
-    width: 50%;
+.div-1{
+    background: #1a1a1a;
+    border-radius: 5px;
+    width: 75%;
+    padding: 1px 7px;
+    margin: 0 auto;
+    min-width: 100px;
+}
+
+.div-2{
+    width: 70%;
     margin: 0 auto;
     min-width: 100px;
 }
