--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@ nav {
     border-bottom: #f1f1f1 1px solid;
     top: 0;
     left: 0;
-    z-index: 0;
+    z-index: 9;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -56,7 +56,7 @@ header {
     top: 0;
     left: 50%;
     transform: translateX(-50%);
-    z-index: 1;
+    z-index: 10;
     margin-top: 10px;
     display: flex;
     align-items: flex-end;
@@ -98,26 +98,41 @@ body {
     background: #1a1a1a;
     color: #f1f1f1;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    
+    border: none;
     margin: 0;
     padding: 0;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100vh;
+    
     position: relative;
     min-width: 320px;
 }
 
 .img-background {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     position: absolute;
     top: 0;
     left: 0;
     z-index: -1;
     opacity: 0.5;
+    /*
+    DEGRADADO DE IMAGEN DE FONDO
+    QUITAR LINK DE IMG 
+    background: 
+        linear-gradient(
+            to bottom,
+            transparent 10%,
+            rgba(0, 0, 0, 0.5) 80%,
+            rgba(0, 0, 0) 95%
+        ),
+        url('https://images.unsplash.com/photo-1542831371-29b0f74f9713?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cHJvZ3JhbWFjaW9ufGVufDB8fDB8fHww') no-repeat center center;
+    background-size: cover;
+    border: none;
+    */
 }
+
 .social-buttons {
     display: flex;
     justify-content: center;
@@ -171,7 +186,7 @@ body {
     }
 }
 
-.div-1, .div-3{
+.div-1, .div-3, .div-4{
     background: #1a1a1a;
     border-radius: 5px;
     width: 75%;
@@ -214,8 +229,10 @@ body {
 
 .div-tools{
     border:#f1f1f1 1px solid;
+    border-radius: 5px;
     padding: 5px 10px;
 }
+
 ul {
     width: auto;
     height: auto;
@@ -265,3 +282,52 @@ li {
         margin: 0 auto;
     }
 }
+
+@keyframes show{
+    from{
+        opacity: 0;
+        scale: 10%;
+    }
+    to{
+        opacity: 1;
+        scale: 100%;
+    }
+}
+
+.div-principal {
+    /* Define el nombre de la línea de tiempo de la vista para la animación */
+    view-timeline-name: --reveal;
+    
+    /* Especifica el nombre de la animación que se aplicará */
+    animation-name: show;
+    /* Asegura que la animación se mantenga en su estado final después de completarse */
+    animation-fill-mode: both;
+
+    /* Define la línea de tiempo de la animación */
+    animation-timeline: --reveal;
+    /* Especifica el rango de la animación: 
+       - 'entry 25%' significa que la animación comenzará cuando el 25% del elemento sea visible.
+       - 'cover 50%' significa que la animación se completará cuando el 50% del elemento esté cubierto. */
+    animation-range: entry 30% cover 40%;
+    z-index: 1;
+}
+
+@media (max-width: 700px) {
+    .div-2 {
+        /* Define el nombre de la línea de tiempo de la vista para la animación */
+        view-timeline-name: --reveal;
+        
+        /* Especifica el nombre de la animación que se aplicará */
+        animation-name: show;
+        /* Asegura que la animación se mantenga en su estado final después de completarse */
+        animation-fill-mode: both;
+    
+        /* Define la línea de tiempo de la animación */
+        animation-timeline: --reveal;
+        /* Especifica el rango de la animación: 
+           - 'entry 25%' significa que la animación comenzará cuando el 25% del elemento sea visible.
+           - 'cover 50%' significa que la animación se completará cuando el 50% del elemento esté cubierto. */
+        animation-range: entry 30% cover 40%;
+        z-index: 1;
+    }
+} 
