--- a/styles/style.css
+++ b/styles/style.css
@@ -188,6 +188,7 @@ body {
     color: #f1f1f1;
     text-align: center;
     margin: 10px auto;
+    padding: 5px;
 }
 /*-------------------------------------------------------------------DIVS-----------------------------------------------------------------------------*/
 .div-1, .div-3, .div-4, .div-5{
