--- a/styles/style.css
+++ b/styles/style.css
@@ -252,19 +252,41 @@ body {
 }
 
 /*---------------------------------------------------------------TIMELAPSE---------------------------------------------------------------------------------*/
+.div-timelapse ul{
+    display: grid;
+        /* Cambia a grid layout */
+        grid-template-columns: repeat(4, 1fr);
+        /* 2 columnas de igual ancho */
+        gap: 10px;
+        /* Espacio entre los elementos */
+        justify-items: center;
+        /* Centra los elementos en las columnas */
+        margin: 0;
+        padding: 10px;
+}
 .div-timelapse ul li {
+    display: flex; /* Activa Flexbox */
+    flex-direction: column; /* Apila los elementos verticalmente */
+    justify-content: flex-start; /* Asegura que los elementos comiencen desde arriba */
+    align-items: center; /* Centra los elementos horizontalmente */
     border: #f1f1f1 1px solid;
     padding: 10px 10px;
-    width: 200px;
+    width: auto;
     list-style-type: none;
     margin: 0 10px;
+    border-radius: 10px;
+    height: auto; /* Define una altura fija para el contenedor */
 }
 
 .div-timelapse ul li a {
+    margin-top: auto; /* Empuja el enlace hacia la parte inferior */
     color: #f1f1f1;
     border: #f1f1f1 1px solid;
     border-radius: 5px;
     padding: 5px 0;
+    text-align: center;
+    text-decoration: none;
+    width: 100%; /* Asegura que el enlace ocupe todo el ancho del contenedor */
 }
 
 .div-timelapse ul li a:hover {
@@ -276,9 +298,108 @@ li small {
     display: flex;
     text-align: center;
 }
+@media (max-width: 1100px) {
+    .div-timelapse ul {
+        display: grid;
+        /* Cambia a grid layout */
+        grid-template-columns: repeat(3, 1fr);
+        /* 2 columnas de igual ancho */
+        gap: 10px;
+        /* Espacio entre los elementos */
+        justify-items: center;
+        /* Centra los elementos en las columnas */
+        margin: 0;
+        padding: 10px;
+    }
 
-/* Media query para cambiar la disposición de los elementos <li> cuando la pantalla es más delgada */
+    li {
+        width: 100%;
+        height: auto;
+        margin: 0;
+        /* Ajusta el margen para los elementos en columna */
+    }
+
+    .img-icon-list {
+        width: 40px;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 0 auto;
+    }
+}
 @media (max-width: 700px) {
+    .div-timelapse ul {
+        display: grid;
+        /* Cambia a grid layout */
+        grid-template-columns: repeat(2, 1fr);
+        /* 2 columnas de igual ancho */
+        gap: 10px;
+        /* Espacio entre los elementos */
+        justify-items: center;
+        /* Centra los elementos en las columnas */
+        margin: 0;
+        padding: 10px;
+    }
+
+    li {
+        width: 100%;
+        height: auto;
+        margin: 0;
+        /* Ajusta el margen para los elementos en columna */
+    }
+
+    .img-icon-list {
+        width: 40px;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 0 auto;
+    }
+}
+@media (max-width: 400px) {
+    .div-timelapse ul {
+        display: grid;
+        /* Cambia a grid layout */
+        grid-template-columns: repeat(1, 1fr);
+        /* 2 columnas de igual ancho */
+        gap: 10px;
+        /* Espacio entre los elementos */
+        justify-items: center;
+        /* Centra los elementos en las columnas */
+        margin: 0;
+        padding: 10px;
+    }
+
+    li {
+        width: 100%;
+        height: auto;
+        margin: 0;
+        /* Ajusta el margen para los elementos en columna */
+    }
+
+    .img-icon-list {
+        width: 40px;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 0    auto;
+    }
+}
+
+.img-icon-cert {
+    width: 20px;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 10 auto;
+    transition: all 0.5s;
+}
+
+@media (max-width: 400px) {
     .div-timelapse ul {
         display: grid;
         /* Cambia a grid layout */
@@ -318,39 +439,52 @@ li small {
     margin: 10 auto;
     transition: all 0.5s;
 }
-
 /*----------------------------------------------------------------DIV TOOLS--------------------------------------------------------------------------------*/
 .div-tools {
     border-radius: 5px;
     padding: 5px 10px;
 }
 
-ul {
-    width: auto;
-    height: auto;
-    display: flex;
-    flex-direction: row;
-    /* Por defecto, los elementos se disponen en una fila */
-    border-radius: 5px;
-    font-family: serif;
-    padding: 1px 40px;
-    font-style: italic;
+.ul-skills {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr); /* Cambia a grid layout */
+    gap: 10px; /* Espacio entre los elementos */
+    justify-items: center; /* Centra los elementos en las columnas */
+    margin: 0; /* Elimina el margen predeterminado */
+    padding: 0; /* Elimina el padding predeterminado */
 }
 
-li {
+.skill-list {
+    padding: 5px 0px;
+    width: 50%;
     list-style-type: none;
     margin: 0 10px;
+    background-color: #252525;
+    border-radius: 10px;
+    box-shadow: darkgrey 3px 2px 10px;
+    transition: 300ms;
+    text-align: center; /* Centra el texto */
+    overflow: hidden; /* Oculta el contenido que se salga */
+    text-overflow: ellipsis; /* Muestra puntos suspensivos si el texto es demasiado largo */
+    white-space: nowrap; /* Evita que el texto se divida en varias líneas */
+}
+
+.skill-list:hover {
+    transform: scale(1.2);
+    transition: 300ms;
 }
 
 li p {
     color: darkgrey;
     margin: 0;
     text-align: center;
+    word-wrap: break-word; /* Permite que las palabras largas se dividan */
+    overflow-wrap: break-word; /* Alternativa para navegadores modernos */
 }
 
 .img-icon-list {
-    width: 20px;
-    height: 20px;
+    width: 40px;
+    height: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -358,14 +492,33 @@ li p {
     transition: all 0.5s;
 }
 
-.img-icon-list:hover {
-    width: 40px;
-    height: 40px;
+@media (max-width: 1100px) {
+    .ul-skills{
+        display: grid;
+        /* Cambia a grid layout */
+        grid-template-columns: repeat(4, 1fr);
+        /* 2 columnas de igual ancho */
+        gap: 10px;
+        /* Espacio entre los elementos */
+        justify-items: center;
+        /* Centra los elementos en las columnas */
+    }
 }
-
+@media (max-width: 900px) {
+    .ul-skills{
+        display: grid;
+        /* Cambia a grid layout */
+        grid-template-columns: repeat(3, 1fr);
+        /* 2 columnas de igual ancho */
+        gap: 10px;
+        /* Espacio entre los elementos */
+        justify-items: center;
+        /* Centra los elementos en las columnas */
+    }
+}
 /* Media query para cambiar la disposición de los elementos <li> cuando la pantalla es más delgada */
 @media (max-width: 700px) {
-    ul {
+    .ul-skills{
         display: grid;
         /* Cambia a grid layout */
         grid-template-columns: repeat(2, 1fr);
@@ -376,19 +529,19 @@ li p {
         /* Centra los elementos en las columnas */
     }
 
-    li {
-        margin: 0;
-        /* Ajusta el margen para los elementos en columna */
+}
+@media (max-width: 300px) {
+    .ul-skills{
+        display: grid;
+        /* Cambia a grid layout */
+        grid-template-columns: repeat(1, 1fr);
+        /* 2 columnas de igual ancho */
+        gap: 10px;
+        /* Espacio entre los elementos */
+        justify-items: center;
+        /* Centra los elementos en las columnas */
     }
 
-    .img-icon-list {
-        width: 40px;
-        height: 40px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin: 0 auto;
-    }
 }
 
 /*--------------------------------------------------------------DIVS ANIMATION----------------------------------------------------------------------------------*/
