--- a/styles/style.css
+++ b/styles/style.css
@@ -110,6 +110,7 @@ body {
     width: 100%;
     position: relative;
     min-width: 320px;
+    
 }
 
 .img-background {
@@ -200,12 +201,22 @@ body {
     background: #1a1a1a;
     border-radius: 5px;
     width: 76%;
-    font-size: 30px;
+    font-size: 50px;
     font-weight: bold;
     color: #f1f1f1;
     text-align: center;
-    margin: 10px auto;
-    padding: 5px;
+    margin: 10px auto 0 auto;
+    padding: 0px;
+}
+.div-name2 {
+    background: #1a1a1a;
+    border-radius: 5px;
+    width: 76%; /* Define un ancho para que el margen automático funcione */
+    font-size: 15px;
+    color: #f1f1f1;
+    text-align: center;
+    margin: 0px auto; /* Centra el elemento horizontalmente */
+    padding: 0px; /* Añade un poco de espacio interno */
 }
 
 /*-------------------------------------------------------------------DIVS-----------------------------------------------------------------------------*/
